# satrin-feed-rs

./: AGENTS.md  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
config/: binance_md.json  bitget_md.json  bybit_md.json  okx_md.json  udp_md.json
crates/k4-core/: AGENTS.md  Cargo.toml
crates/k4-core/src/: config.rs  cpu_affinity.rs  dedup.rs  error.rs  latency.rs  lib.rs  logging.rs  shm.rs  time_util.rs  udp.rs
crates/k4-core/src/types/: enums.rs  market_data.rs  mod.rs  symbol.rs  trading.rs
crates/k4-core/src/ws/: client.rs  mod.rs  redundant.rs
crates/k4-md/: AGENTS.md  Cargo.toml
crates/k4-md/src/: dedup_worker.rs  json_util.rs  lib.rs  pipeline.rs  registry.rs  ws_helper.rs
crates/k4-md/src/binance/: config.rs  json_parser.rs  mod.rs  sbe_parser.rs
crates/k4-md/src/bitget/: config.rs  json_parser.rs  mod.rs
crates/k4-md/src/bybit/: config.rs  json_parser.rs  mod.rs  order_book.rs  uuid_dedup.rs
crates/k4-md/src/okx/: config.rs  json_parser.rs  mod.rs
crates/k4-md/src/udp/: config.rs  mod.rs
crates/k4-runner/: AGENTS.md  Cargo.toml
crates/k4-runner/src/: main.rs
crates/k4-td/: AGENTS.md  Cargo.toml
crates/k4-td/src/: event.rs  lib.rs
crates/k4-td/src/binance/: auth.rs  config.rs  futures.rs  mod.rs  spot.rs  symbol_mapper.rs
schema/: udp_message.fbs
