[package]
name = "k4-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rkyv = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
ahash = { workspace = true }
core_affinity = { workspace = true }
xxhash-rust = { workspace = true }
# WebSocket
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
url = "2"
