[package]
name = "k4-md"
version = "0.1.0"
edition.workspace = true

[dependencies]
k4-core = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
ahash = { workspace = true }
crossbeam-channel = { workspace = true }
fast-float2 = { workspace = true }
xxhash-rust = { workspace = true }
async-trait = "0.1"
