[package]
name = "k4-runner"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "k4-runner"
path = "src/main.rs"

[dependencies]
k4-core = { workspace = true }
k4-md = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
