[package]
name = "k4-td"
version = "0.1.0"
edition.workspace = true

[dependencies]
k4-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
urlencoding = { workspace = true }
futures-util = { workspace = true }
async-trait = "0.1"
hex = "0.4"
base64 = "0.22"
tokio-tungstenite = { workspace = true }
uuid = { workspace = true }
